Solving bug report ID 11 (Internal spreadsheet). Making sure buttons on bookmark list are aligned properly and have more spacing

--- a/css/ddbasic.styles.css
+++ b/css/ddbasic.styles.css
@@ -3383,7 +3383,7 @@ table td {
   text-align: left;
   vertical-align: top;
 }
-/* line 55, ../sass/_ddbasic.tables.scss */
+/* line 54, ../sass/_ddbasic.tables.scss */
 .table th, table th {
   font-family: "SourceSansProSemibold";
   font-weight: normal;
@@ -3392,11 +3392,11 @@ table td {
   padding-bottom: 10px;
   padding-left: 10px;
 }
-/* line 64, ../sass/_ddbasic.tables.scss */
+/* line 63, ../sass/_ddbasic.tables.scss */
 .table thead th, table thead th {
   vertical-align: bottom;
 }
-/* line 73, ../sass/_ddbasic.tables.scss */
+/* line 72, ../sass/_ddbasic.tables.scss */
 .table caption + thead tr:first-child th, table caption + thead tr:first-child th,
 .table caption + thead tr:first-child td,
 table caption + thead tr:first-child td,
@@ -3410,18 +3410,18 @@ table thead:first-child tr:first-child th,
 table thead:first-child tr:first-child td {
   border-top: 0;
 }
-/* line 77, ../sass/_ddbasic.tables.scss */
+/* line 76, ../sass/_ddbasic.tables.scss */
 .table tbody + tbody, table tbody + tbody {
   border-top: 2px solid #d5d5d5;
 }
 
-/* line 88, ../sass/_ddbasic.tables.scss */
+/* line 87, ../sass/_ddbasic.tables.scss */
 .table-condensed th,
 .table-condensed td {
   padding: 3.33333px;
 }
 
-/* line 97, ../sass/_ddbasic.tables.scss */
+/* line 96, ../sass/_ddbasic.tables.scss */
 .table-bordered {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -3431,12 +3431,12 @@ table thead:first-child tr:first-child td {
   *border-collapse: collapsed;
   border-left: 0;
 }
-/* line 106, ../sass/_ddbasic.tables.scss */
+/* line 105, ../sass/_ddbasic.tables.scss */
 .table-bordered th,
 .table-bordered td {
   border-left: 1px solid #d5d5d5;
 }
-/* line 118, ../sass/_ddbasic.tables.scss */
+/* line 117, ../sass/_ddbasic.tables.scss */
 .table-bordered caption + thead tr:first-child th,
 .table-bordered caption + tbody tr:first-child th,
 .table-bordered caption + tbody tr:first-child td,
@@ -3448,28 +3448,28 @@ table thead:first-child tr:first-child td {
 .table-bordered tbody:first-child tr:first-child td {
   border-top: 0;
 }
-/* line 123, ../sass/_ddbasic.tables.scss */
+/* line 122, ../sass/_ddbasic.tables.scss */
 .table-bordered thead:first-child tr:first-child th:first-child,
 .table-bordered tbody:first-child tr:first-child td:first-child {
   -webkit-border-radius: 4px 0 0;
   -moz-border-radius: 4px 0 0;
   border-radius: 4px 0 0;
 }
-/* line 128, ../sass/_ddbasic.tables.scss */
+/* line 127, ../sass/_ddbasic.tables.scss */
 .table-bordered thead:first-child tr:first-child th:last-child,
 .table-bordered tbody:first-child tr:first-child td:last-child {
   -webkit-border-radius: 0 4px 0 0;
   -moz-border-radius: 0 4px 0 0;
   border-radius: 0 4px 0 0;
 }
-/* line 133, ../sass/_ddbasic.tables.scss */
+/* line 132, ../sass/_ddbasic.tables.scss */
 .table-bordered thead:last-child tr:last-child th:first-child,
 .table-bordered tbody:last-child tr:last-child td:first-child {
   -webkit-border-radius: 0 0 0 4px;
   -moz-border-radius: 0 0 0 4px;
   border-radius: 0 0 0 4px;
 }
-/* line 137, ../sass/_ddbasic.tables.scss */
+/* line 136, ../sass/_ddbasic.tables.scss */
 .table-bordered thead:last-child tr:last-child th:last-child,
 .table-bordered tbody:last-child tr:last-child td:last-child {
   -webkit-border-radius: 0 4px 0 0;
@@ -3477,13 +3477,13 @@ table thead:first-child tr:first-child td {
   border-radius: 0 4px 0 0;
 }
 
-/* line 149, ../sass/_ddbasic.tables.scss */
+/* line 148, ../sass/_ddbasic.tables.scss */
 .table-striped tbody tr:nth-child(odd) td,
 .table-striped tbody tr:nth-child(odd) th {
   background-color: #fbfbfb;
 }
 
-/* line 163, ../sass/_ddbasic.tables.scss */
+/* line 162, ../sass/_ddbasic.tables.scss */
 .table tbody tr:hover td, table tbody tr:hover td,
 .table tbody tr:hover th,
 table tbody tr:hover th {
@@ -6455,47 +6455,48 @@ ul.ui-autocomplete .ui-menu-item a:hover {
 /* line 401, ../sass/_ddbasic.user.scss */
 .pane-bookmarks td {
   text-align: left;
+  vertical-align: middle;
 }
-/* line 405, ../sass/_ddbasic.user.scss */
+/* line 406, ../sass/_ddbasic.user.scss */
 .pane-bookmarks .ding-entity-button {
   float: right;
-  margin-right: 10px;
+  margin-right: 20px;
 }
 
-/* line 421, ../sass/_ddbasic.user.scss */
+/* line 422, ../sass/_ddbasic.user.scss */
 .pane-reservations {
   border-bottom: 1px solid #efefef;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
 
-/* line 427, ../sass/_ddbasic.user.scss */
+/* line 428, ../sass/_ddbasic.user.scss */
 #ding-reservation-reservations-ready-form {
   border-bottom: 1px solid #efefef;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
 
-/* line 444, ../sass/_ddbasic.user.scss */
+/* line 445, ../sass/_ddbasic.user.scss */
 .pane-debts table {
   margin-bottom: 20px;
 }
-/* line 449, ../sass/_ddbasic.user.scss */
+/* line 450, ../sass/_ddbasic.user.scss */
 .pane-debts table th.feedate,
 .pane-debts table td.feedate {
   width: 10%;
 }
-/* line 453, ../sass/_ddbasic.user.scss */
+/* line 454, ../sass/_ddbasic.user.scss */
 .pane-debts table th.feeamount,
 .pane-debts table td.feeamount {
   text-align: right;
 }
-/* line 459, ../sass/_ddbasic.user.scss */
+/* line 460, ../sass/_ddbasic.user.scss */
 .pane-debts .pay-button {
   margin-bottom: 20px;
 }
 
-/* line 470, ../sass/_ddbasic.user.scss */
+/* line 471, ../sass/_ddbasic.user.scss */
 .pane-debts,
 .pane-ding-dibs-dibs-terms-of-sale,
 .pane-ding-dibs-dibs-cards-supported {
@@ -6503,7 +6504,7 @@ ul.ui-autocomplete .ui-menu-item a:hover {
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
-/* line 477, ../sass/_ddbasic.user.scss */
+/* line 478, ../sass/_ddbasic.user.scss */
 .pane-debts #dibs-cards-supported .card-name,
 .pane-ding-dibs-dibs-terms-of-sale #dibs-cards-supported .card-name,
 .pane-ding-dibs-dibs-cards-supported #dibs-cards-supported .card-name {
